Junção do back-end.